--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -24,7 +24,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="contact-us.html">Contact Us</a>
+          <a class="nav-link" [routerLink]="'/p'"> Privado</a>
         </li>
 
         <li class="nav-item" *ngFor="let auth of auths">
