--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,40 +2,40 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-3">
-                <h5>Get started</h5>
+                <h5>Mas visitado</h5>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Sign up</a></li>
-                    <li><a href="#">Downloads</a></li>
+                    <li><a href="#">inicio</a></li>
+                    <li><a href="#">Registrate</a></li>
+                    <li><a href="#">Ingresa</a></li>
+                    <li><a href="#">Vende</a></li>
+                    <li><a href="#">Compra</a></li>
                 </ul>
             </div>
             <div class="col-sm-3">
-                <h5>About us</h5>
+                <h5>Sobre Nosotros</h5>
                 <ul>
-                    <li><a href="#">Company Information</a></li>
-                    <li><a href="#">Contact us</a></li>
-                    <li><a href="#">Reviews</a></li>
+                    <li><a href="#">Información de la empresa</a></li>
+                    <li><a href="#">Contáctanos</a></li>
                 </ul>
             </div>
             <div class="col-sm-3">
-                <h5>Support</h5>
+                <h5>Soprte al cliente</h5>
                 <ul>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Help desk</a></li>
-                    <li><a href="#">Forums</a></li>
+                    <li><a href="#">Preguntas y respuestas frecuentes (FAQ)</a></li>
+                    <li><a href="#">Mesa de ayuda</a></li>
                 </ul>
             </div>
             <div class="col-sm-3">
-                <h5>Legal</h5>
+                <h5> Términos y condiciones</h5>
                 <ul>
-                    <li><a href="#">Terms of Service</a></li>
-                    <li><a href="#">Terms of Use</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Términos de sericio</a></li>
+                    <li><a href="#">Términos y condiciones de uso </a></li>
+                    <li><a href="#">Politíca de privadicidad</a></li>
                 </ul>
             </div>
         </div>
     </div>
     <div class="footer-copyright">
-        <p>© 2021 Copyright Text</p>
+        <p>© 2021 Agrofrost SAS</p>
     </div>
 </footer>
