--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,16 +1,31 @@
-<main class="page">
+<main class="page  mt-4 pt-4">
     <section class="clean-block about-us">
         <div class="container">
             <div class="block-heading">
-                <h2 class="text-info">About Us</h2>
+                <h2 class="text-info">Sobre nosotros</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
             </div>
+            
+            
             <div class="row justify-content-center">
+                <div class="col-sm-12 col-lg-8">
+                    <div class="card text-center clean-card"><img class="card-img-top w-100 d-block px-4" src="assets/img/logos/logo.png">
+                        <div class="card-body info">
+                            <h4 class="card-title">Agrofrosr</h4>
+                            <p class="card-text"> Persona apasionada por la tecnología, se ha desempeñado como instructor de programación, posee conocimientos de desarrollo web. Sera el CEO (que en español significa 'Oficial Ejecutivo en jefe'. El cual tiene la mayor autoridad en la jerarquía operacional de una organización.</p>
+                            <div class="icons"><a href="#"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-social-instagram"></i></a><a href="#"><i class="icon-social-twitter"></i></a></div>
+                        </div>
+                    </div>
+                </div>
+
+                               
+            </div>
+            <div class="row justify-content-center mt-4">
                 <div class="col-sm-6 col-lg-4">
                     <div class="card text-center clean-card"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar1.jpg">
                         <div class="card-body info">
-                            <h4 class="card-title">John Smith</h4>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <h4 class="card-title">Diego Hernande</h4>
+                            <p class="card-text"> Persona apasionada por la tecnología, se ha desempeñado como instructor de programación, posee conocimientos de desarrollo web. Sera el CEO (que en español significa 'Oficial Ejecutivo en jefe'. El cual tiene la mayor autoridad en la jerarquía operacional de una organización.</p>
                             <div class="icons"><a href="#"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-social-instagram"></i></a><a href="#"><i class="icon-social-twitter"></i></a></div>
                         </div>
                     </div>
@@ -18,21 +33,13 @@
                 <div class="col-sm-6 col-lg-4">
                     <div class="card text-center clean-card"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar2.jpg">
                         <div class="card-body info">
-                            <h4 class="card-title">Robert Downturn</h4>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <h4 class="card-title">Oscar Bautista</h4>
+                            <p class="card-text">Persona curiosa, interesado por las nuevas tecnologías y hacer de estas una herramienta más para el hombre. Interesado por estar en constante aprendizaje. Desempañara el puesto como director de informática (CIO) y de tecnología (CTO).</p>
                             <div class="icons"><a href="#"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-social-instagram"></i></a><a href="#"><i class="icon-social-twitter"></i></a></div>
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-6 col-lg-4">
-                    <div class="card text-center clean-card"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar3.jpg">
-                        <div class="card-body info">
-                            <h4 class="card-title">Ally Sanders</h4>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                            <div class="icons"><a href="#"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-social-instagram"></i></a><a href="#"><i class="icon-social-twitter"></i></a></div>
-                        </div>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </section>
