--- a/src/app/pages/pricing/pricing.component.html
+++ b/src/app/pages/pricing/pricing.component.html
@@ -1,8 +1,8 @@
-<main class="page pricing-table-page">
+<main class="page pricing-table-page  mt-4 pt-4">
     <section class="clean-block clean-pricing dark">
         <div class="container">
             <div class="block-heading">
-                <h2 class="text-info">Pricing Table</h2>
+                <h2 class="text-info">Planes</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
             </div>
             <div class="row justify-content-center">
