--- a/src/app/pages/singup/singup.component.html
+++ b/src/app/pages/singup/singup.component.html
@@ -1,15 +1,48 @@
-<main class="page registration-page">
-    <section class="clean-block clean-form dark">
-        <div class="container">
-            <div class="block-heading">
-                <h2 class="text-info">Registration</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
-            </div>
-            <form>
-                <div class="mb-3"><label class="form-label" for="name">Name</label><input class="form-control item" type="text" id="name"></div>
-                <div class="mb-3"><label class="form-label" for="password">Password</label><input class="form-control item" type="password" id="password"></div>
-                <div class="mb-3"><label class="form-label" for="email">Email</label><input class="form-control item" type="email" id="email"></div><button class="btn btn-primary" type="submit">Sign Up</button>
-            </form>
+<main class="page registration-page  mt-4 pt-4">
+  <section class="clean-block clean-form dark">
+    <div class="container">
+      <div class="block-heading">
+        <h2 class="text-info">Registarte</h2>
+        <p>
+          Al registrarte podrás obtener todos lo benéficos gratuitos que ofrece
+          nuestra plataforma, además, de poderte contactar con otros usuarios
+        </p>
+        <p>
+          Si ya te encuentras registrado en la plataforma da click
+          <a class="text-info" [routerLink]="'/singup'"> aqui para ingresar</a>
+        </p>
+      </div>
+      <form>
+        <div class="mb-3">
+          <label class="form-label" for="name">Nombres</label
+          ><input class="form-control item" type="text" id="name" />
         </div>
-    </section>
+        <div class="mb-3">
+          <label class="form-label" for="lastname">Apellidos</label
+          ><input class="form-control item" type="text" id="lastname" />
+        </div>
+        <div class="mb-3">
+          <label class="form-label" for="email">Correo</label
+          ><input class="form-control item" type="email" id="email" />
+        </div>
+        <div class="mb-3">
+          <label class="form-label" for="password">Contraseña</label
+          ><input class="form-control item" type="password" id="password" />
+        </div>
+        <div class="mb-3">
+          <div class="form-check">
+            <input
+              class="form-check-input"
+              type="checkbox"
+              id="checkbox"
+            /><label class="form-check-label" for="checkbox"
+              >Acepto termnos y condiciones</label
+            >
+          </div>
+        </div>
+
+        <button class="btn btn-primary" type="submit">Registarse</button>
+      </form>
+    </div>
+  </section>
 </main>
