--- a/src/app/pages/pricing/pricing.component.html
+++ b/src/app/pages/pricing/pricing.component.html
@@ -9,7 +9,7 @@
                 <div class="col-md-5 col-lg-4">
                     <div class="clean-pricing-item">
                         <div class="heading">
-                            <h3>BASIC</h3>
+                            <h3>No tengo prisa</h3>
                         </div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         <div class="features">
