--- a/src/app/pages/pricing/pricing.component.html
+++ b/src/app/pages/pricing/pricing.component.html
@@ -18,7 +18,7 @@
                             <h4><span class="feature">Storage:&nbsp;</span><span>10GB</span></h4>
                         </div>
                         <div class="price">
-                            <h4>$25</h4>
+                            <h4>$25 cop</h4>
                         </div><button class="btn btn-outline-primary d-block w-100" type="button">BUY NOW</button>
                     </div>
                 </div>
