--- a/src/app/pages/singin/singin.component.html
+++ b/src/app/pages/singin/singin.component.html
@@ -32,6 +32,21 @@
         </div>
         <button class="btn btn-primary" type="submit">Iniciar Sesion</button>
       </form>
+      
+      
+      <div id="firebaseui-auth-container" class="auth-container">
+
+      </div>
+
+      <div *ngIf="auth.user | async as user; else showLogin">
+        <h1>Hello {{ user.displayName }}!</h1>
+
+        <button (click)="logout()">Logout</button>
+      </div>
+      <ng-template #showLogin>
+        <p>Please login.</p>
+        <button (click)="login()">Login with Google</button>
+      </ng-template>
     </div>
   </section>
 </main>
