--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,7 @@
+
+@import "assets/boostrap_custom.scss";
+@import "~bootstrap/scss/bootstrap.scss";
+
 /* You can add global styles to this file, and also import other style files */
 .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
     padding-right: 0;
