--- a/src/app/pages/singin/singin.component.html
+++ b/src/app/pages/singin/singin.component.html
@@ -1,52 +1,55 @@
-<main class="page login-page  mt-4 pt-4">
+<main class="page login-page mt-4 pt-4">
   <section class="clean-block clean-form dark">
-    <div class="container">
-      <div class="block-heading">
-        <h2 class="text-info">Ingresar</h2>
-        <p>
-          Para inicar sesión debes estar regitrado, si no lo estas. da click
-          <a class="text-info" [routerLink]="'/singup'">
-            aqui para registarte</a
-          >
-        </p>
-      </div>
-      <form>
-        <div class="mb-3">
-          <label class="form-label" for="email">Correo electronico</label
-          ><input class="form-control item" type="email" id="email" />
-        </div>
-        <div class="mb-3">
-          <label class="form-label" for="password">Contraseña</label
-          ><input class="form-control" type="password" id="password" />
-        </div>
-        <div class="mb-3">
-          <div class="form-check">
-            <input
-              class="form-check-input"
-              type="checkbox"
-              id="checkbox"
-            /><label class="form-check-label" for="checkbox"
-              >Mantener sesion iniciada en este dispositivo</label
-            >
-          </div>
-        </div>
-        <button class="btn btn-primary" type="submit">Iniciar Sesion</button>
-      </form>
-      
-      
-      <div id="firebaseui-auth-container" class="auth-container">
-
-      </div>
-
-      <div *ngIf="auth.user | async as user; else showLogin">
-        <h1>Hello {{ user.displayName }}!</h1>
-
-        <button (click)="logout()">Logout</button>
-      </div>
-      <ng-template #showLogin>
-        <p>Please login.</p>
-        <button (click)="login()">Login with Google</button>
-      </ng-template>
+    <div *ngIf="auth.user | async as user; else showLogin">
+      <h1>Hello {{ user.displayName }}!</h1>
+      <button (click)="logout()">Logout</button>
     </div>
+    <ng-template #showLogin>
+      <div class="container">
+        <div class="block-heading">
+          <h2 class="text-info">Ingresar</h2>
+          <p>
+            Para inicar sesión debes estar regitrado, si no lo estas. da click
+            <a class="text-info" [routerLink]="'/singup'">
+              aqui para registarte</a
+            >
+          </p>
+        </div>
+
+        <form>
+          <div class="mb-3">
+            <label class="form-label" for="email">Correo electronico</label
+            ><input class="form-control item" type="email" id="email" />
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="password">Contraseña</label
+            ><input class="form-control" type="password" id="password" />
+          </div>
+          <div class="mb-3">
+            <div class="form-check">
+              <input
+                class="form-check-input"
+                type="checkbox"
+                id="checkbox"
+              /><label class="form-check-label" for="checkbox"
+                >Mantener sesion iniciada en este dispositivo</label
+              >
+            </div>
+          </div>
+          <button class="btn btn-primary" type="submit">Iniciar Sesion</button>
+
+          <div class="federado">
+            <button class="google" (click)="loginWithGoogle()">
+              Inicia Sesión con Google
+            </button>
+            <button class="facebook" (click)="loginWithFacebook()">
+              Inica Sesión con Facebook
+            </button>
+          </div>
+        </form>
+
+        <div class="g-signin2" data-onsuccess="onSignIn"></div>
+      </div>
+    </ng-template>
   </section>
 </main>
