--- a/src/assets/boostrap_custom.scss
+++ b/src/assets/boostrap_custom.scss
@@ -1,8 +1,10 @@
 $link-color: #99cc99 !default;
 
+$color-verde-oscuro: #339966;
+$color-verde-claro: #99cc99;
 
 $theme-colors: (
-  "primary": #339966,
-  "secondary": #99cc99,
-  "danger": #ff4136
+  "primary": $color-verde-oscuro,
+  "secondary": $color-verde-claro,
+  "danger": #ff4136,
 );
