--- a/src/app/pages/singin/singin.component.html
+++ b/src/app/pages/singin/singin.component.html
@@ -16,14 +16,22 @@
           </p>
         </div>
 
-        <form>
+        <form #f="ngForm" (ngSubmit)="loginBasicEmailAndPassword(f)">
           <div class="mb-3">
             <label class="form-label" for="email">Correo electronico</label
-            ><input class="form-control item" type="email" id="email" />
+            ><input
+              class="form-control item"
+              type="email"
+              id="email"
+              [(ngModel)]="user.email"
+              name="email"
+            />
           </div>
           <div class="mb-3">
             <label class="form-label" for="password">Contraseña</label
-            ><input class="form-control" type="password" id="password" />
+            ><input class="form-control" type="password" id="password" 
+            [(ngModel)]="user.password"
+            name="password"/>
           </div>
           <div class="mb-3">
             <div class="form-check">
@@ -38,14 +46,14 @@
           </div>
           <button class="btn btn-primary" type="submit">Iniciar Sesion</button>
 
-          <div class="federado">
+          <!-- <div class="federado">
             <button class="google" (click)="loginWithGoogle()">
               Inicia Sesión con Google
             </button>
             <button class="facebook" (click)="loginWithFacebook()">
               Inica Sesión con Facebook
             </button>
-          </div>
+          </div> -->
         </form>
 
         <div class="g-signin2" data-onsuccess="onSignIn"></div>
