Añade alertas visuales para incio de sesion y actualiza boostrap

--- a/src/app/pages/singin/singin.component.html
+++ b/src/app/pages/singin/singin.component.html
@@ -39,8 +39,10 @@
                 class="form-check-input"
                 type="checkbox"
                 id="checkbox"
+                [(ngModel)]="remindMe"
+                name='remindMe'
               /><label class="form-check-label" for="checkbox"
-                >Mantener sesion iniciada en este dispositivo</label
+                >Recordar en este dispositivo</label
               >
             </div>
           </div>
