--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -22,37 +22,55 @@
       data-bs-toggle="collapse"
       class="navbar-toggler"
       data-bs-target="#navcol-1"
+      [ngClass]="{'collapsed': navbarOpen}"
+      (click)='toggleNavbar()'
     >
       <span class="visually-hidden">Toggle navigation</span
-      ><span class="navbar-toggler-icon"></span>
+      ><span class="navbar-toggler-icon" ></span>
     </button>
-    <div class="collapse navbar-collapse" id="navcol-1">
+
+    <div class="collapse navbar-collapse" id="navcol-1"
+    [ngClass]="{'show': !navbarOpen}"
+    (click)='toggleNavbar()'>
       <ul class="navbar-nav ms-auto">
         <li class="nav-item" *ngFor="let path of paths">
           <a
-            class="nav-link active"
+            class="nav-link"
             aria-current="page"
             [routerLink]="path.path"
+            [routerLinkActive]="'active'"
             >{{ path.name }}</a
           >
+          
         </li>
 
         <li class="nav-item">
           <a class="nav-link" [routerLink]="'/p'"> Privado</a>
         </li>
 
-        <li class="nav-item" *ngFor="let auth of auths">
-          <a
-            [ngClass]="{
-              'btn-outline-primary': auth.type === 'primary',
-              'btn-outline-secondary': auth.type === 'secondary'
-            }"
-            class="nav-link active btn text-white"
-            aria-current="page"
-            [routerLink]="auth.path"
-            >{{ auth.name }}</a
-          >
-        </li>
+        <ng-container *ngIf=" !isLogin  else logoutOption">
+          <li class="nav-item" >
+            <a class="btn-outline-primary primary nav-link active btn text-white"
+            [routerLink]="'/singin'">
+            Iniciar Sesión
+            </a>
+          </li>
+          <li class="nav-item" >
+            <a class="btn-outline-secondary secondary nav-link active btn text-white"
+            [routerLink]="'/singup'">
+            Registrarse
+            </a>
+          </li>
+        </ng-container>
+        
+        <ng-template #logoutOption> 
+          <button class="btn-outline-primary primary nav-link active btn text-white"
+        (click) = "logout()"
+        >
+            Cerrar sesióm
+          </button>
+        </ng-template>
+        
         <!-- <form class="d-flex">
           <input
             class="form-control me-2"
