--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,9 +8,12 @@
     <div class="text">
       <h2>Conectando el agro con el mundo</h2>
       <p>Descubre los productos agricolas de Cundinamarca</p>
-      <button class="btn btn-outline-light btn-lg" type="button">
+      <a 
+        class="btn btn-outline-light btn-lg"
+        [routerLink]="['/posts']"  
+      >
         Compra o Vende
-      </button>
+      </a>
     </div>
   </section>
 
