--- a/src/app/private-pages/create-publication/create-publication.component.html
+++ b/src/app/private-pages/create-publication/create-publication.component.html
@@ -199,6 +199,14 @@
             Debe ingresar un valor valido
           </div>
         </div>
+
+
+        <div>
+          <agm-map [latitude]="lat" [longitude]="lng">
+            <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+          </agm-map>
+          
+        </div>
         <button class="btn btn-primary mt-3 w-100" type="submit">
           Publicar
         </button>
