--- a/src/app/private-pages/create-publication/create-publication.component.html
+++ b/src/app/private-pages/create-publication/create-publication.component.html
@@ -214,43 +214,63 @@
                 una imagen
               </p>
             </div>
-            <div class="custom-file fileInputProfileWrap">
-              <input
-                type="file"
-                (change)="fileChangeEvent($event)"
-                class="fileInputProfile btn-primary"
-              />
-              <div class="img-space">
-                <div *ngIf="isImageSaved; else elseTemplate">
-                  <img [src]="cardImageBase64" />
-                </div>
-                <ng-template #elseTemplate>
-                  <div class="message-error">No se ha subido imagenes</div>
-                  <div class="message-error">
-                    {{ imageError }}
-                  </div>
-                  <!-- <img src="./../../assets/placeholder.png" class="img-responsive"> -->
-                </ng-template>
+
+            <ng-container *ngIf="imagenesBase64.length > 0; else noImagenes">
+              <div *ngFor="let file of imagenesBase64" class="my-5">
+                <img [src]="file" alt="" class="img-thumbnail" />
+                <button
+                class="deleteImagen btn btn-danger"
+                (click)="eliminarImagen(file)">
+                  Eliminar
+                </button>
               </div>
-            </div>
+            </ng-container>
+            <ng-template #noImagenes>
+              <div class="text-center alert alert-warning">
+                No se ha subido imagenes
+              </div>
+
+              <!-- <img src="./../../assets/placeholder.png" class="img-responsive"> -->
+            </ng-template>
           </div>
         </fieldset>
 
-        <div formArrayName="imagenes">
-          <div *ngFor="let imagen of imagenes.controls; index as i">
-            <input class="my-2"
-             type="file" [formControlName]="i" [value]="i" />
+        <div class="mt-2 my-5">
+          <div
+            *ngIf="imagenesBase64.length < 5"
+            class="custom-file fileInputProfileWrap"
+          >
+            <div class="img-space">
+              <input
+                (change)="fileChangeEvent($event)"
+                class="fileInputProfile"
+                type="file"
+              />
+              <div id="newImagen" class="text-center">
+                Click para subir imagen
+                <p>Te quedan {{ 5 - imagenesBase64.length }}</p>
+                <small *ngIf="imagenesBase64.length > 1"
+                  >Si no quieres añadir más imagenes puedes pasar <br>la siguiente
+                  sección</small
+                >
+              </div>
+            </div>
+          </div>
+          <div class="message-error">
+            {{ imageError }}
           </div>
         </div>
 
-        <button
+
+        <hr class="my-5">
+        <!-- <button
           type="button"
           class="btn btn-danger"
           (click)="insertarNuevaImagen()"
         >
           Añadir nueva imagen
-        </button>
-        <hr class="my-5" />
+        </button> -->
+
         <fieldset>
           <div class="text-center">
             <h3 class="text-info">Datos de referencia</h3>
@@ -290,7 +310,7 @@
             </div>
           </div>
 
-          <div>
+          <div class="mb-3">
             <agm-map
               (mapClick)="colocarCoordenada($event)"
               [latitude]="market.lat"
@@ -321,6 +341,23 @@
             </agm-map>
           </div>
         </fieldset>
+        <div class="mb-3 mt-3">
+          <label class="form-label" for="celular">
+            Numero Celular</label
+          >
+          <br>
+          <small class="small">(Sera visble unicamente para usuarios Regitrados)</small>
+          <input
+            class="form-control item"
+            type="number"
+            formControlName="celular"
+            (keypress)="onKeyPressOnlyNumbers($event)"
+            [class.is-invalid]="campoEsInvalido('celular')"
+          />
+          <div *ngIf="campoEsInvalido('celular')" class="message-error">
+            Debe ingresar un numero de contacto
+          </div>
+        </div>
         <button class="btn btn-primary mt-3 w-100" type="submit">
           Publicar
         </button>
