--- a/src/app/private-pages/create-publication/create-publication.component.scss
+++ b/src/app/private-pages/create-publication/create-publication.component.scss
@@ -1,44 +1,57 @@
+@import "src/boostrap_custom.scss";
 agm-map {
   height: 300px;
 }
 
-// .image-wrap {
-//   padding: 10px;
-//   border: solid 1px #e0e0e0;
-//   display: inline-block;
-// }
+.fileInputProfile {
+  display: block;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  cursor: pointer;
 
-// .img-space {
-//   border: dashed 1px #d3d3d3;
-//   border-radius: 8px;
-//   background-color: #f2f2f2;
-//   height: auto;
-//   width: 100%;
-//   padding: 10px;
-//   min-height: 175px;
-// }
+  z-index: 99;
+  opacity: 0;
+  min-height: 175px;
+  position: relative;
 
-// .img-space img {
-//   display: block;
-//   width: 100%;
-//   height: 100%;
-//   margin: auto;
-//   cursor: pointer;
-// }
+  justify-self: center;
+}
+.fileInputProfile[disabled] + .img-space {
+  pointer-events: none;
+  cursor: not-allowed !important;
+}
 
-// .fileInputProfileWrap {
-//   width: 100%;
-//   height: auto;
-// }
+.img-space {
+  
+  border: dashed 1px  $color-verde-claro ;
+  border-radius: 8px;
+  background-color: #f2f2f2;
+  height: auto;
+  width: 100%;
+  min-height: 165px;
+}
 
-// .fileInputProfile {
-//   position: absolute;
-//   height: 100%;
-//   width: 100%;
-//   z-index: 99;
-//   opacity: 0;
-// }
-// .fileInputProfile[disabled] + .img-space {
-//   pointer-events: none;
-//   cursor: not-allowed !important;
-// }
+#newImagen{
+  
+  font-family: cursive;
+  color:  $color-verde-claro;
+  position: absolute;
+  padding: 30px;
+  margin-top: -138px;
+  left: 50%;
+  transform: translate(-50%,0);
+   
+
+}
+img{
+  position: relative;
+}
+
+.deleteImagen{
+  position: absolute;
+  z-index: 1;
+  margin-left: -90px;
+  margin-top: 10px;
+}
+
